--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="css/code.css">
     <link rel="stylesheet" href="css/buttons.css">
     <link rel="stylesheet" href="css/links.css">
+    <link rel="stylesheet" href="css/tooltip.css">
 
     <link rel="stylesheet" href="css/helpers.css">
 
@@ -33,6 +34,7 @@
     <script src="js/currencyHelpers.js"></script>
 
     <script src="js/sidebar.js"></script>
+    <script src="js/tooltip.js"></script>
 
     <link rel="icon" href="img/favicon.png" type="image/png">
 </head>
@@ -77,11 +79,11 @@
         </nav>
         <nav class="sidebar listContainerVertical children-w-100">
             <div class="listVertical children-w-100" style="gap: 4px;">
-                <a class="element sidebarElement hoverable " href="/">Home</a>
-                <a class="element sidebarElement hoverable " href="/Rules">Code Flow</a>
+                <a class="element sidebarElement hoverable" href="/">Home</a>
+                <a class="element sidebarElement hoverable" href="/Rules">Code Flow</a>
             </div>
             <div class="listVertical children-w-100" style="gap: 4px; margin-bottom: 8px;">
-                <a class="element sidebarElement hoverable " href="/Help">Help</a>
+                <a class="element sidebarElement hoverable" href="/Help">Help</a>
             </div>
         </nav>
         <div id="sidebarOverlay" class="sidebarOpenOnly sidebarControlsEnabledOnly sidebarOverlay" onclick="closeSidebar()"></div>
@@ -91,6 +93,15 @@
 
         </main>
     </div>
+
+    <style id="tooltipStyle">
+
+    </style>
+    <div id="tooltip" class="cardTooltip hide">
+
+    </div>
+
+
 
     <script src="js/dropArea.js"></script>
     <script src="js/dialog.js"></script>
