add nav and fix line endings

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
         </nav>
         <nav class="sidebar listContainerVertical children-w-100">
-            <div class="listVertical children-w-100" style="gap: 4px;">
+            <div id="topSidebarList" class="listVertical children-w-100" style="gap: 4px;">
                 <a class="element sidebarElement hoverable" href="#">Home</a>
                 <a class="element sidebarElement hoverable" href="#flow">Code Flow</a>
             </div>
