--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="css/colorSchemes.css">
     <link rel="stylesheet" href="css/settings.css">
     <link rel="stylesheet" href="css/table.css">
-    <link rel="stylesheet" href="css/elements.css">
     <link rel="stylesheet" href="css/lists.css">
     <link rel="stylesheet" href="css/headers.css">
     <link rel="stylesheet" href="css/dropArea.css">
@@ -18,11 +17,15 @@
     <link rel="stylesheet" href="css/icons.css">
     <link rel="stylesheet" href="css/borders.css">
     <link rel="stylesheet" href="css/contentEditable.css">
-    <link rel="stylesheet" href="css/sidebar.css">
     <link rel="stylesheet" href="css/code.css">
     <link rel="stylesheet" href="css/buttons.css">
     <link rel="stylesheet" href="css/links.css">
     <link rel="stylesheet" href="css/tooltip.css">
+    <link rel="stylesheet" href="css/input.css">
+    <link rel="stylesheet" href="css/elements.css">
+    <link rel="stylesheet" href="css/images.css">
+
+    <link rel="stylesheet" href="css/sidebar.css">
 
     <link rel="stylesheet" href="css/site.css">
     <link rel="stylesheet" href="css/helpers.css">
@@ -35,6 +38,8 @@
     <script src="js/hashHelpers.js"></script>
     <script src="js/icons.js"></script>
     <script src="js/breakHelpers.js"></script>
+    <script src="js/inputHelpers.js"></script>
+    <script src="js/parsingHelpers.js"></script>
 
     <script src="js/sidebar.js"></script>
     <script src="js/tooltip.js"></script>
@@ -49,12 +54,12 @@
     <header>
         <nav class="navbar listContainerHorizontal children-h-100">
             <div id="navbarListLeft" class="listHorizontal children-h-100">
-                <button class="sidebarOpenOnly sidebarControlsEnabledOnly" type="button" onclick="closeSidebar()">
+                <button class="sidebarOpenOnly sidebarControlsEnabledOnly" type="button" title="Close Sidebar" onclick="closeSidebar()">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed" class="icon">
                         <path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/>
                     </svg>
                 </button>
-                <button class="sidebarClosedOnly sidebarControlsEnabledOnly" type="button" onclick="openSidebar()">
+                <button class="sidebarClosedOnly sidebarControlsEnabledOnly" type="button" title="Open Sidebar" onclick="openSidebar()">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed" class="icon">
                         <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/>
                     </svg>
@@ -70,24 +75,31 @@
                 </a>
             </div>
             <div class="listHorizontal children-h-100">
-                <button class="darkModeOnly" type="button" onclick="swapBetweenLightAndDark()">
+                <button class="darkModeOnly" type="button" tooltip="Enable Light Mode" onclick="swapBetweenLightAndDark()">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon noFill">
-                        <title>Enable Light Mode</title>
                         <path stroke-linecap="round" stroke-linejoin="round" d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z"></path>
                     </svg>
                 </button>
-                <button class="lightModeOnly" type="button" onclick="swapBetweenLightAndDark()">
+                <button class="lightModeOnly" type="button" tooltip="Enable Dark Mode" onclick="swapBetweenLightAndDark()">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon noFill">
-                        <title>Enable Dark Mode</title>
                         <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z"></path>
                     </svg>
+                </button>
+                <button type="button" tooltip="Open Settings" onclick="Settings.open()">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon noFill">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M10.343 3.94c.09-.542.56-.94 1.11-.94h1.093c.55 0 1.02.398 1.11.94l.149.894c.07.424.384.764.78.93.398.164.855.142 1.205-.108l.737-.527a1.125 1.125 0 0 1 1.45.12l.773.774c.39.389.44 1.002.12 1.45l-.527.737c-.25.35-.272.806-.107 1.204.165.397.505.71.93.78l.893.15c.543.09.94.559.94 1.109v1.094c0 .55-.397 1.02-.94 1.11l-.894.149c-.424.07-.764.383-.929.78-.165.398-.143.854.107 1.204l.527.738c.32.447.269 1.06-.12 1.45l-.774.773a1.125 1.125 0 0 1-1.449.12l-.738-.527c-.35-.25-.806-.272-1.203-.107-.398.165-.71.505-.781.929l-.149.894c-.09.542-.56.94-1.11.94h-1.094c-.55 0-1.019-.398-1.11-.94l-.148-.894c-.071-.424-.384-.764-.781-.93-.398-.164-.854-.142-1.204.108l-.738.527c-.447.32-1.06.269-1.45-.12l-.773-.774a1.125 1.125 0 0 1-.12-1.45l.527-.737c.25-.35.272-.806.108-1.204-.165-.397-.506-.71-.93-.78l-.894-.15c-.542-.09-.94-.56-.94-1.109v-1.094c0-.55.398-1.02.94-1.11l.894-.149c.424-.07.765-.383.93-.78.165-.398.143-.854-.108-1.204l-.526-.738a1.125 1.125 0 0 1 .12-1.45l.773-.773a1.125 1.125 0 0 1 1.45-.12l.737.527c.35.25.807.272 1.204.107.397-.165.71-.505.78-.929l.15-.894Z" />
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+                      </svg>                      
                 </button>
             </div>
         </nav>
         <nav class="sidebar listContainerVertical children-w-100">
-            <div id="topSidebarList" class="listVertical children-w-100" style="gap: 4px;">
+            <div class="listVertical children-w-100" style="gap: 4px;">
                 <a class="element sidebarElement hoverable" href="#">Home</a>
                 <a class="element sidebarElement hoverable" href="#flow">Code Flow</a>
+                <div id="localPagesList" class="listVertical children-w-100 hide" style="gap: 4px;">
+                    
+                </div>
             </div>
             <div class="listVertical children-w-100" style="gap: 4px;">
                 <a class="element sidebarElement hoverable" href="#help">Help</a>
@@ -115,7 +127,10 @@
 
     <script src="js/dropArea.js"></script>
     <script src="js/dialog.js"></script>
-    <script src="js/contenteditableHelpers"></script>
+    <script src="js/contenteditableHelpers.js"></script>
+    <script src="js/settings.js"></script>
+
+    <script src="js/chatGptApi.js"></script>
 
     </body>
 </html>
