--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="css/input.css">
     <link rel="stylesheet" href="css/elements.css">
     <link rel="stylesheet" href="css/images.css">
+    <link rel="stylesheet" href="css/scrollButtons.css">
 
     <link rel="stylesheet" href="css/sidebar.css">
 
@@ -64,7 +65,7 @@
                         <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/>
                     </svg>
                 </button>
-                <div class="sidebarControlsDisabledOnly" style="visibility: hidden;" type="button">
+                <div class="sidebarControlsDisabledOnly invisible" type="button">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed" class="icon">
                         <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/>
                     </svg>
@@ -107,10 +108,13 @@
         </nav>
         <div id="sidebarOverlay" class="sidebarOpenOnly sidebarControlsEnabledOnly sidebarOverlay" onclick="closeSidebar()"></div>
     </header>
-    <div class="container">
-        <main id="pages">
+    <div class="navBarBreak"></div>
+    <div id="scrollingElement">
+        <div class="container">
+            <main id="pages">
 
-        </main>
+            </main>
+        </div>
     </div>
 
     <style id="tooltipStyle">
@@ -122,13 +126,15 @@
     <div id="dialogs">
 
     </div>
+    <div id="scrollButtons" class="">
 
-
+    </div>
 
     <script src="js/dropArea.js"></script>
     <script src="js/dialog.js"></script>
     <script src="js/contenteditableHelpers.js"></script>
     <script src="js/settings.js"></script>
+    <script src="js/scrollingHelpers.js"></script>
 
     <script src="js/chatGptApi.js"></script>
 
