--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                 </div>
             </div>
             <div class="listVertical children-w-100" style="gap: 4px;">
+                <a class="element sidebarElement hoverable" tooltip="The source is fully available on GitHub." href="https://github.com/DeadlyArtist/aidevsuite">Source</a>
                 <a class="element sidebarElement hoverable" href="#help">Help</a>
             </div>
         </nav>
@@ -126,7 +127,7 @@
     <div id="dialogs">
 
     </div>
-    <div id="scrollButtons" class="">
+    <div id="scrollButtons" class="listVertical">
 
     </div>
 
