add katex, marked, dompurifier
also replaced inputs after accept.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>aidevsuite</title>
 
+    <link rel="stylesheet" href="dist/katex.min.css">
+
     <link rel="stylesheet" href="css/colorSchemes.css">
     <link rel="stylesheet" href="css/settings.css">
     <link rel="stylesheet" href="css/table.css">
@@ -41,6 +43,8 @@
     <script src="js/breakHelpers.js"></script>
     <script src="js/inputHelpers.js"></script>
     <script src="js/parsingHelpers.js"></script>
+    <script src="js/markdownHelpers.js"></script>
+    <script src="js/katexHelpers.js"></script>
 
     <script src="js/sidebar.js"></script>
     <script src="js/tooltip.js"></script>
@@ -138,6 +142,11 @@
     <script src="js/scrollingHelpers.js"></script>
 
     <script src="js/chatGptApi.js"></script>
+
+    <script src="dist/marked.min.js"></script>
+    <script src="dist/purify.min.js"></script>
+    <script src="dist/katex.min.js"></script>
+    <script src="dist/katex-auto-render.min.js"></script>
 
     </body>
 </html>
