added nice code blocks with syntax highlight
also some more minor markdown styling

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>aidevsuite</title>
 
     <link rel="stylesheet" href="dist/katex.min.css">
+    <link rel="stylesheet" href="dist/stackoverflow-dark.css">
 
     <link rel="stylesheet" href="css/colorSchemes.css">
     <link rel="stylesheet" href="css/settings.css">
@@ -27,6 +28,9 @@
     <link rel="stylesheet" href="css/elements.css">
     <link rel="stylesheet" href="css/images.css">
     <link rel="stylesheet" href="css/scrollButtons.css">
+    <link rel="stylesheet" href="css/highlight.css">
+    <link rel="stylesheet" href="css/quotes.css">
+    <link rel="stylesheet" href="css/markdown.css">
 
     <link rel="stylesheet" href="css/sidebar.css">
 
@@ -35,6 +39,7 @@
 
     <script src="js/colorSchemes.js"></script>
     <script src="js/coreHelpers.js"></script>
+    <script src="js/timeHelpers.js"></script>
     <script src="js/stringHelpers.js"></script>
     <script src="js/fileHelpers.js"></script>
     <script src="js/currencyHelpers.js"></script>
@@ -45,6 +50,7 @@
     <script src="js/parsingHelpers.js"></script>
     <script src="js/markdownHelpers.js"></script>
     <script src="js/katexHelpers.js"></script>
+    <script src="js/codeHelpers.js"></script>
 
     <script src="js/sidebar.js"></script>
     <script src="js/tooltip.js"></script>
@@ -147,6 +153,7 @@
     <script src="dist/purify.min.js"></script>
     <script src="dist/katex.min.js"></script>
     <script src="dist/katex-auto-render.min.js"></script>
+    <script src="dist/highlight.min.js"></script>
 
     </body>
 </html>
