markdown input, chatbot, markdown bars, decoration elements

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <link rel="stylesheet" href="css/highlight.css">
     <link rel="stylesheet" href="css/quotes.css">
     <link rel="stylesheet" href="css/markdown.css">
+    <link rel="stylesheet" href="css/progress.css">
+    <link rel="stylesheet" href="css/math.css">
 
     <link rel="stylesheet" href="css/sidebar.css">
 
