github pages fix

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                         <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/>
                     </svg>
                 </div>
-                <a href="/" class="listHorizontal">
-                    <img src="/img/favicon.png" alt="Logo" style="height: 2rem; width: auto;"/>
+                <a href="#" class="listHorizontal">
+                    <img src="img/favicon.png" alt="Logo" style="height: 2rem; width: auto;"/>
                     <div class="xl-font">aidevsuite</div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
 
     <script src="js/dropArea.js"></script>
     <script src="js/dialog.js"></script>
-    <script src="js/contenteditableHelpers.js"></script>
+    <script src="js/contentEditableHelpers.js"></script>
     <script src="js/settings.js"></script>
     <script src="js/scrollingHelpers.js"></script>
 
