quick code copy fix

--- a/index.html
+++ b/index.html
@@ -143,6 +143,8 @@
 
     </div>
 
+    <iframe id="sandbox" sandbox="allow-scripts" style="display:none;"></iframe>
+
     <script src="js/dropArea.js"></script>
     <script src="js/dialog.js"></script>
     <script src="js/contentEditableHelpers.js"></script>
