--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <script src="js/colorSchemes.js"></script>
     <script src="js/coreHelpers.js"></script>
     <script src="js/timeHelpers.js"></script>
+    <script src="js/iframeHelpers.js"></script>
     <script src="js/stringHelpers.js"></script>
     <script src="js/fileHelpers.js"></script>
     <script src="js/currencyHelpers.js"></script>
@@ -143,7 +144,7 @@
 
     </div>
 
-    <iframe id="sandbox" sandbox="allow-scripts" style="display:none;"></iframe>
+    <iframe id="sandbox" sandbox="allow-scripts" src="iframe.html" style="display:none;"></iframe>
 
     <script src="js/dropArea.js"></script>
     <script src="js/dialog.js"></script>
