--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <link rel="stylesheet" href="css/markdown.css">
     <link rel="stylesheet" href="css/progress.css">
     <link rel="stylesheet" href="css/math.css">
+    <link rel="stylesheet" href="css/mark.css">
 
     <link rel="stylesheet" href="css/sidebar.css">
 
@@ -110,8 +111,13 @@
         <nav class="sidebar listContainerVertical children-w-100">
             <div class="listVertical children-w-100" style="gap: 4px;">
                 <a class="element sidebarElement hoverable" href="#">Home</a>
+                <a class="element sidebarElement hoverable" href="#extern">Extern</a>
                 <a class="element sidebarElement hoverable" href="#flow">Code Flow</a>
                 <div id="localPagesList" class="listVertical children-w-100 hide" style="gap: 4px;">
+                    
+                </div>
+                <div class="hb-4"></div>
+                <div id="linkedPagesList" class="listVertical children-w-100 hide" style="gap: 4px;">
                     
                 </div>
             </div>
