--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <script src="js/colorSchemes.js"></script>
     <script src="js/coreHelpers.js"></script>
     <script src="js/timeHelpers.js"></script>
+    <script src="js/byteHelpers.js"></script>
     <script src="js/iframeHelpers.js"></script>
     <script src="js/stringHelpers.js"></script>
     <script src="js/fileHelpers.js"></script>
