properly integrated monaco editor, added worker
also restructured pages to use local/ instead to avoid conflicts.

--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
                 </div>
             </div>
             <div class="listVertical children-w-100" style="gap: 4px;">
-                <a class="element sidebarElement hoverable" tooltip="The source is fully available on GitHub."
-                    href="https://github.com/DeadlyArtist/aidevsuite">Source</a>
+                <a class="element sidebarElement hoverable" tooltip="The source code of the worker script in which your code is executed." href="#worker">Worker</a>
+                <a class="element sidebarElement hoverable" tooltip="The source is fully available on GitHub." href="https://github.com/DeadlyArtist/aidevsuite">Source</a>
                 <a class="element sidebarElement hoverable" href="#help">Help</a>
             </div>
         </nav>
