--- a/index.html
+++ b/index.html
@@ -173,7 +173,9 @@
 
     </div>
 
-    <iframe id="sandbox" sandbox="allow-scripts" src="iframe.html" style="display:none;"></iframe>
+    <div id="iframeContainer">
+
+    </div>
 
     <script src="js/dropArea.js"></script>
     <script src="js/dialog.js"></script>
