--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <script src="js/markdownHelpers.js"></script>
     <script src="js/katexHelpers.js"></script>
     <script src="js/codeHelpers.js"></script>
+    <script src="dist/ResizeSensor.js"></script>
 
     <script src="js/sidebar.js"></script>
     <script src="js/tooltip.js"></script>
