added user mode

--- a/index.html
+++ b/index.html
@@ -132,21 +132,21 @@
         </nav>
         <nav class="sidebar listContainerVertical children-w-100">
             <div class="listVertical children-w-100" style="gap: 4px;">
-                <a class="element sidebarElement hoverable" href="#">Home</a>
-                <a class="element sidebarElement hoverable" href="#flow">Code Flow</a>
+                <a id="homeButton" class="element sidebarElement hoverable" href="#">Home</a>
+                <a id="flowButton" class="element sidebarElement hoverable" href="#flow">Code Flow</a>
                 <div id="localPagesList" class="listVertical children-w-100 hide" style="gap: 4px;">
 
                 </div>
                 <div class="hb-4"></div>
-                <a class="element sidebarElement hoverable" href="#extern">Extern</a>
+                <a id="externButton" class="element sidebarElement hoverable" href="#extern">Extern</a>
                 <div id="linkedPagesList" class="listVertical children-w-100 hide" style="gap: 4px;">
 
                 </div>
             </div>
             <div class="listVertical children-w-100" style="gap: 4px;">
-                <a class="element sidebarElement hoverable" tooltip="The source code of the worker script in which your code is executed." href="#worker">Worker</a>
-                <a class="element sidebarElement hoverable" tooltip="The source is fully available on GitHub." href="https://github.com/DeadlyArtist/aidevsuite">Source</a>
-                <a class="element sidebarElement hoverable" href="#help">Help</a>
+                <a id="workerButton" class="element sidebarElement hoverable" tooltip="The source code of the worker script in which your code is executed." href="#worker">Worker</a>
+                <a id="sourceButton" class="element sidebarElement hoverable" tooltip="The source is fully available on GitHub." href="https://github.com/DeadlyArtist/aidevsuite">Source</a>
+                <a id="helpButton" class="element sidebarElement hoverable" href="#help">Help</a>
             </div>
         </nav>
         <div id="sidebarOverlay" class="sidebarOpenOnly sidebarControlsEnabledOnly sidebarOverlay"
