added auto resize to worker and extern code editors

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     <script src="js/tooltip.js"></script>
 
     <script src="js/flow.js"></script>
+    <script src="js/workerPage.js"></script>
     <script src="js/pages.js"></script>
     <script src="js/site.js"></script>
 
