add groq api support.

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <script src="js/settings.js"></script>
     <script src="js/scrollingHelpers.js"></script>
 
-    <script src="js/chatGptApi.js"></script>
+    <script src="js/chatApi.js"></script>
 
     <script src="dist/marked.min.js"></script>
     <script src="dist/purify.min.js"></script>
