--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             </div>
             <div class="listVertical children-w-100" style="gap: 4px;">
                 <a id="workerButton" class="element sidebarElement hoverable" tooltip="The source code of the worker script in which your code is executed." href="#worker">Worker</a>
-                <a id="sourceButton" class="element sidebarElement hoverable" tooltip="The source is fully available on GitHub." href="https://github.com/DeadlyArtist/aidevsuite">Source</a>
+                <a id="sourceButton" class="element sidebarElement hoverable" tooltip="The source is fully available on GitHub." href="https://github.com/DeadlyArtist/aidevsuite" target=”_blank”>Source</a>
                 <a id="helpButton" class="element sidebarElement hoverable" href="#help">Help</a>
             </div>
         </nav>
