indent, math fix, stream scroll fix

--- a/index.html
+++ b/index.html
@@ -135,12 +135,12 @@
             <div class="listVertical children-w-100" style="gap: 4px;">
                 <a id="homeButton" class="element sidebarElement hoverable" href="#">Home</a>
                 <a id="flowButton" class="element sidebarElement hoverable" href="#flow">Code Flow</a>
-                <div id="localPagesList" class="listVertical children-w-100 hide" style="gap: 4px;">
+                <div id="localPagesList" class="listVertical children-w-100 hide" style="gap: 4px; padding-left: 20px;">
 
                 </div>
                 <div class="hb-4"></div>
                 <a id="externButton" class="element sidebarElement hoverable" href="#extern">Extern</a>
-                <div id="linkedPagesList" class="listVertical children-w-100 hide" style="gap: 4px;">
+                <div id="linkedPagesList" class="listVertical children-w-100 hide" style="gap: 4px; padding-left: 20px;">
 
                 </div>
             </div>
