do more scroll ticks

--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
     <script src="js/contentEditableHelpers.js"></script>
     <script src="js/settings.js"></script>
     <script src="js/scrollingHelpers.js"></script>
+    <script src="js/imageHelpers.js"></script>
 
     <script src="js/chatApi.js"></script>
 
