--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <nav class="sidebar listContainerVertical children-w-100">
             <div class="listVertical children-w-100" style="gap: 4px;">
                 <a id="homeButton" class="element sidebarElement hoverable" href="#">Home</a>
-                <a id="flowButton" class="element sidebarElement hoverable" href="#flow">Code Flow</a>
+                <a id="flowButton" class="element sidebarElement hoverable" href="#flow">Local</a>
                 <div id="localPagesList" class="listVertical children-w-100 hide" style="gap: 4px; padding-left: 20px;">
 
                 </div>
