--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/breaks.css">
     <link rel="stylesheet" href="css/select.css">
     <link rel="stylesheet" href="css/icons.css">
+    <link rel="stylesheet" href="css/iframes.css">
     <link rel="stylesheet" href="css/borders.css">
     <link rel="stylesheet" href="css/contentEditable.css">
     <link rel="stylesheet" href="css/buttons.css">
@@ -33,6 +34,7 @@
     <link rel="stylesheet" href="css/code.css">
     <link rel="stylesheet" href="css/quotes.css">
     <link rel="stylesheet" href="css/markdown.css">
+    <link rel="stylesheet" href="css/htmlPreview.css">
     <link rel="stylesheet" href="css/progress.css">
     <link rel="stylesheet" href="css/math.css">
     <link rel="stylesheet" href="css/mark.css">
@@ -57,6 +59,7 @@
     <script src="js/inputHelpers.js"></script>
     <script src="js/parsingHelpers.js"></script>
     <script src="js/markdownHelpers.js"></script>
+    <script src="js/htmlHelpers.js"></script>
     <script src="js/katexHelpers.js"></script>
     <script src="js/codeHelpers.js"></script>
     <script src="dist/ResizeSensor.js"></script>
